Fixed alignment of cancel reply button

--- a/style/css/splorp.css
+++ b/style/css/splorp.css
@@ -75,6 +75,7 @@ input[type="submit"] {
 	font-size: 0.5em;
 	font-weight: normal;
 	padding: 0.6em 1.0em;
+	vertical-align: middle;
 	}
 
 .post-edit-link:hover,
